# aplication-service/src/infrastructure/http/routes/routes.js
@@ -1,0 +1,26 @@
+import { Router } from 'express';
+
+import hateoas from '../middlewares/hateoas.js';
+import handler from '../middlewares/responseHandler.js';
+import order from "../middlewares/order.js";
+
+import InternalServerError from "./helper/500.js"
+import NotFound from "./helper/404.js";
+
+import { verify } from "../../../presentation/controllers/authController.js";
+
+import userRouter from './userRouter.js';
+import AuthRouter from './authRouter.js';
+
+const routes = Router();
+routes.use(hateoas);
+routes.use(handler);
+routes.use(order);
+
+routes.use("/login", AuthRouter);
+routes.use('/api/users', verify, userRouter);
+
+routes.use(InternalServerError);
+routes.use(NotFound);
+
+export default routes;
